unpackaged/main/default/objects/JSON_Mapping__mdt/JSON_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>JSON mapping for different payloads</description>
    <label>JSON Mapping</label>
    <pluralLabel>JSON Mappings</pluralLabel>
</CustomObject>