unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>APi name of the child object</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>