unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Data_type__c.field-meta.xml
<CustomField>
    <fullName>Data_type__c</fullName>
    <description>Data type of the field value</description>
    <label>Data type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>