unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <description>Default value of the current node</description>
    <label>Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>