unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the salesforce field</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>