unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <description>API name on the child object field that is to be used to filter records</description>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>