unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Filter_Field_Datatype__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_Datatype__c</fullName>
    <description>Data type of the filter field</description>
    <label>Filter Field Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>