unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Grouping fields of complex type in case multiple instances need to be created of the same complex type that are mapped to different salesforce fields.</description>
    <label>Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>