unpackaged/main/default/objects/JSON_Mapping__mdt/fields/JSON_Node__c.field-meta.xml
<CustomField>
    <fullName>JSON_Node__c</fullName>
    <description>Node name of JSON</description>
    <label>JSON Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>