unpackaged/main/default/objects/JSON_Mapping__mdt/fields/List_has_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>List_has_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List has Child Records</label>
    <type>Checkbox</type>
</CustomField>