unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Null_Check_field__c.field-meta.xml
<CustomField>
    <fullName>Null_Check_field__c</fullName>
    <description>this field is used to check a different field value which if null stops the current node from being rendered.</description>
    <label>Null Check field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>