unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Parent_Node__c.field-meta.xml
<CustomField>
    <fullName>Parent_Node__c</fullName>
    <description>Name of parent json node</description>
    <label>Parent Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>