unpackaged/main/default/objects/JSON_Mapping__mdt/fields/Type_of_Node__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Node__c</fullName>
    <description>Whether the current JSON node is a complex structure(Map), list of elements(List)  or a simple key-value pair(Simple)</description>
    <label>Type of Node</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>